<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/back_screen"
    android:id="@+id/linearLayoutMain">
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/header"
        android:gravity="center_vertical"
        android:id="@+id/linearLayoutHeader">
        <ImageView android:src="@drawable/back_btn"
            android:contentDescription="@string/backbutton"
            android:layout_width="70dip"
            android:layout_height="40dip"
            android:scaleType="fitXY"
            android:id="@+id/imageViewBackButton"
            android:layout_marginLeft="15dip"
            android:onClick="onClickBackButton"
            android:background="@android:color/transparent"/>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="20dip">
            <ImageView android:src="@drawable/attachment2"
                android:contentDescription="@string/attachmentimage"
                android:visibility="invisible"
                android:id="@+id/imageViewAttachment"
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"/>
        </LinearLayout>    
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayoutFullHeight"
        android:onClick="onClickLinearLayoutOutside"
        android:gravity="center">
        <LinearLayout android:layout_width="300dip"
        android:layout_height="380dip"
	        android:layout_margin="15dip"
	        android:orientation="vertical"
	        android:id="@+id/linearLayoutOuter"
	        android:background="@drawable/border">
			<TextView
				android:id="@+id/TextView01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dip"
				android:layout_marginTop="25dip"
				android:text="@string/tiptitle"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:textColor="#0C45FF"
				android:textStyle="bold" />
			<EditText android:layout_width="270dip"
			    android:hint=""
			    android:singleLine="true"
				android:id="@+id/editextTipTitle"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dip"
				android:layout_marginRight="15dip"
				android:layout_marginTop="15dip"/>
			<TextView android:textAppearance="@android:style/TextAppearance.Medium"
				android:id="@+id/textViewDescription"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dip"
				android:layout_marginLeft="15dip"
				android:textStyle="bold"
				android:textColor="#0C45FF"
				android:text="@string/description"/>
			<EditText android:singleLine="false"
			    android:hint=""
			    android:gravity="top"
				android:background="@drawable/discription_input_back"
				android:id="@+id/editTextDescription"
				android:layout_width="270dip"
				android:layout_height="100dip"
				android:paddingLeft="15dip"
				android:paddingTop="10dip"
				android:layout_marginLeft="15dip"
				android:layout_marginRight="15dip"
				android:layout_marginTop="15dip"/>
			<TableLayout android:layout_height="fill_parent"
				android:layout_width="wrap_content"
				android:stretchColumns="*"
				android:id="@+id/tableLayoutImageContainer"
				android:layout_marginTop="10dip"
				android:layout_marginBottom="10dip">
				<TableRow >
					<ImageView android:layout_width="0dip"
					    android:contentDescription="@string/addmediaimage"
						android:id="@+id/imageViewAddMedia"
					    android:layout_height="wrap_content"
					    android:layout_weight="1"
					    android:scaleType="fitXY"
					    android:src="@drawable/add_media"
					    android:layout_marginLeft="10dip"
					    android:layout_marginRight="10dip"
					    android:onClick="onClickAddMedia"
					    android:background="@android:color/transparent"/>
					<ImageView android:layout_width="0dip"
					    android:contentDescription="@string/sendtipimage"
					    android:id="@+id/imageViewSendTip"
					    android:layout_height="wrap_content"
					    android:layout_weight="1"
					    android:scaleType="fitXY"
					    android:layout_marginLeft="10dip"
					    android:layout_marginRight="10dip"
					    android:src="@drawable/send_tip"
					    android:onClick="onClickSendTip"
					    android:background="@android:color/transparent"/>
				</TableRow>
			</TableLayout>  <!-- tableLayoutImageContainer -->
		</LinearLayout>	<!-- linearLayoutOuter -->
    </LinearLayout>	<!-- linearLayoutFullHeight -->
</LinearLayout>	<!-- linearLayoutMain -->