<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/back_screen" >
    <LinearLayout android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:gravity="center"
            android:background="@drawable/header">
    	<TextView android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="@string/tipnowoptin"
            android:id="@+id/textViewTopHeader"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold"/>
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="onClickLinearLayoutOutside">
            <LinearLayout android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:layout_marginTop="15dip"
		        android:orientation="vertical">
		        <ImageView android:layout_width="200dip"
		            android:contentDescription="@string/tipnowlogo"
		            android:layout_height="80dip"
		            android:src="@drawable/logo_tipnow"
		            android:background="@android:color/transparent"
		            android:scaleType="fitXY"/>
		   
		    
		    <LinearLayout android:layout_width="300dip"
		        android:layout_marginTop="20dip"
		        android:layout_height="250dip"
		     	android:orientation="vertical"
		        android:padding="10dip"
		        android:gravity="center"
		        android:onClick="onClickLinearLayoutOutside"
		        android:layout_marginLeft="15dip"
				android:layout_marginRight="15dip"
		        android:id="@+id/linearLayoutOuter"
		        android:background="@drawable/border">
		        <LinearLayout android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:paddingLeft="10dip"
		            android:layout_gravity="center_vertical">
		            <TextView android:layout_width="100dip" 
						android:layout_height="wrap_content"
						android:text="First Name:"
						android:textColor="@android:color/black"/>
		        	<EditText android:singleLine="true" 
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:id="@+id/editTextFirstName"/>    
		        </LinearLayout>
		        <LinearLayout android:layout_width="fill_parent"
		             android:paddingLeft="10dip"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical">
			        <TextView android:layout_width="100dip" 
						android:layout_height="wrap_content"
						android:text="Last Name:"
						android:textColor="@android:color/black"/>
			        <EditText 
			            android:singleLine="true"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:id="@+id/editTextLastName"/>
		        </LinearLayout>
		        <LinearLayout android:layout_width="fill_parent"
		             android:paddingLeft="10dip"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical">
			        <TextView android:layout_width="100dip" 
						android:layout_height="wrap_content"
						android:text="EmailID:"
						android:textColor="@android:color/black"/>
			        <EditText
			            android:singleLine="true"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:id="@+id/editTextEmailID"/>
		        </LinearLayout>
		        <LinearLayout android:layout_width="fill_parent"
		             android:paddingLeft="10dip"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical">
			        <TextView android:layout_width="100dip" 
						android:layout_height="wrap_content"
						android:textColor="@android:color/black"/>
			        <ImageView android:layout_width="120dip"
			            android:contentDescription="@string/submitbutton"
			            android:layout_marginTop="10dip"
			            android:layout_height="40dip"
			            android:scaleType="fitXY"
			            android:background="@android:color/transparent"
			            android:src="@drawable/submit"
			            android:onClick="onClickSubmit"/>
			    </LinearLayout>    
		    </LinearLayout>    
		        <!-- <Button android:text="SignUp"
		            android:layout_marginTop="10dip"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:id="@+id/buttonSignUp" /> -->
		       </LinearLayout>
        </LinearLayout>
    </ScrollView>
       

</LinearLayout>